Allows GatherBqsrReports to accept a .list file as input.